version/0.20/_sources/api/solver/_autosummary/settings/cone_axis_vector.rst.txt
:orphan:

.. _cone_axis_vector:

cone_axis_vector
================

.. autoclass:: ansys.fluent.core.solver.settings_241.cone_axis_vector.cone_axis_vector
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`cone_axis_vector_child <cone_axis_vector_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`porous_zone <porous_zone>`       Help not available.

================================   =======================

