version/0.28/_sources/api/solver/_autosummary/settings/cone_axis_vector.rst.txt
:orphan:

.. _cone_axis_vector:

cone_axis_vector
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.cone_axis_vector
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`cone_axis_vector_child <cone_axis_vector_child>`


.. rubric:: Included in:

================================   =============================================================

Parent                                                                                   Summary

================================   =============================================================
:ref:`porous_zone <porous_zone>`       Allows to change porous-zone model variables or settings.

================================   =============================================================

